# yeoboseyo-django

./: .gitignore  README.md  manage.py  requirements-dev.txt  requirements.txt  setup.cfg
yeoboseyo/: __init__.py  apps.py  asgi.py  env.sample  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
yeoboseyo/.github/workflows/: pythonapp.yml
yeoboseyo/management/commands/: report.py  run.py  switch_mail.py  switch_masto.py  switch_status.py
yeoboseyo/migrations/: 0001_initial.py  0002_auto_20201003_1801.py
yeoboseyo/services/: __init__.py  joplin.py  localstorage.py  mail.py  mastodon.py  reddit.py  rss.py
yeoboseyo/templates/: base.html
yeoboseyo/templates/yeoboseyo/: messages.html  modal_deletion.html  trigger_actions_cards.html  trigger_actions_tables.html  trigger_footer.html  trigger_form.html  trigger_list.html  trigger_list_card.html  trigger_list_table.html
