[metadata]
name=yeoboseyo-django
description="Yeoboseyo - 여보세요"
author=FoxMaSk
author_email=foxmask@protonmail.com
maintainer=FoxMaSk
maintainer_email=foxmask@protonmail.com
url=https://github.com/foxmask/yeoboseyo
long_description=file: README.md
long_description_content_type=text/markdown
license=BSD License
keywords=service python django
version = attr: yeoboseyo-django.__version__
download_url="https://github.com/foxmask/yeoboseyo-django/archive/yeoboseyo-django-" + version + ".zip",

classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Internet
    Topic :: Communications
    Topic :: Database

[options]
zip_safe=false

include_package_data=true

install_requires=
    django==3.1.2
    django-environ==0.4.5


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build
ignore = E402, F401
